--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Smooth Scrolling Page</title>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
-	<link href="styles.css" rel="stylesheet">
+	<link href="./css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -135,7 +135,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	
-	<script src="smoothscroll.js"></script>
+	<script src="./js/smoothscroll.js"></script>
 	
 </body>
 	
