--- a/2.18.Scroll-Effects/index.html
+++ b/2.18.Scroll-Effects/index.html
@@ -1,161 +1,179 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Smooth Scrolling Page</title>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
-	<link href="styles.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Smooth Scrolling Page</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+  <link href=".css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<h1>Smooth Scroller</h1>
-		<nav>
-			<ul>
-				<li><a href="#first" class="selected">First Section</a></li>
-				<li><a href="#second">Second Section</a></li>
-				<li><a href="#third">Third Section</a></li>
-				<li><a href="#fourth">Fourth Section</a></li>
-				<li><a href="#fifth">Fifth Section</a></li>
-			</ul>
-		</nav>
-	</header>
+  <header>
+    <h1>Smooth Scroller</h1>
+      <nav>
+      <ul>
+        <li><a href="#first" class="selected">First Section</a></li>
+        <li><a href="#second">Second Section</a></li>
+        <li><a href="#third">Third Section</a></li>
+        <li><a href="#fourth">Fourth Section</a></li>
+        <li><a href="#fifth">Fifth Section</a></li>
+      </ul>
+    </nav>
+  </header>
 
-	<section id="first">
-		<article>
-			<div>
-				<h1>Section One</h1>
+  <section id="first">
+    <article>
+      <div>
+        <h1>Section One</h1>
+        <p>
+        I want revenge for the murder of MY president (James Jesus Angleton - motherfucking deuschebag 
+        to the 10th degree - deserves a slow painful death after everything is first taken from him.  
+        His millions of stolen dollars, property, everything.  Fucking bastard must die..
+        I want money for the bullshit lies and secrecy (repungnant) of VanDerAsshole - general 
+        F??khead in 1950's.
+        Absolute f??k-face who thought he knew better than EVERY person on the planet. He had 
+        no right whatsoever.
 
-				<p>
-					Cat ipsum dolor sit amet, sleep on my human's head fall over dead (not
-					really but gets sypathy) mesmerizing birds, plays league of legends. Leave
-					fur on owners clothes kitty poochy i love cuddles yet demand to have some of
-					whatever the human is cooking, then sniff the offering and walk away for
-					more napping, more napping all the napping is exhausting. Thug cat
-					immediately regret falling into bathtub yet a nice warm laptop for me to sit
-					on or eat the fat cats food for eat the rubberband steal the warm chair
-					right after you get up. Purrr purr littel cat, little cat purr purr.
-				</p>
-			</div>
 
-			<img src="http://placekitten.com/400/300" alt="kitten">
-		</article>
-	</section>
+                    </p>
+      </div>
 
-	<section id="second">
-		<h1>Section Two</h1>
+      <img src="http://placekitten.com/400/300" alt="kitten">
+    </article>
+  </section>  <!-- section id="first" -->
+  <section id="second">
+    <h1>Section Two</h1>
+    <div>
+      <article>
+                    <img src="http://placekitten.com/200/200" alt="kitten">
 
-		<div>
-			<article>
-				<img src="http://placekitten.com/200/200" alt="kitten">
+                    <h2>Kittens Rule!</h2>
 
-				<h2>Kittens Rule!</h2>
+                    <p>
+EVERY one in the CIA/FBI/NSA who possess these lies yet doesn't announce them, is in turn
+a liar & thief & accomplice to murder.  Started a 'cold war' in order to cover their f??king 
+lies.  I want them imprisoned. Every cowardly one on them!
+                    </p>
+      </article>
 
-				<p>
-					Stand in front of the computer screen more napping, more napping all the
-					napping is exhausting yet rub face on everything i'm bored inside, let me
-					out i'm lonely outside, let me in i can't make up my mind whether to go in
-					or out, guess i'll just stand partway in and partway out, contemplating the
-					universe for half an hour how dare you nudge me with your foot?!?! leap into
-					the air in greatest offense!
-				</p>
-			</article>
+      <article>
+                    <img src="http://placekitten.com/200/200" alt="kitten">
 
-			<article>
-				<img src="http://placekitten.com/200/200" alt="kitten">
+                    <h2>Kittens Rule!</h2>
 
-				<h2>Kittens Rule!</h2>
+                    <p>
+https://youtu.be/lb13ynu3Iac
+"We knew the world would not be the same. Few people laughed, few people cried, most people were silent. 
+I remembered the line from the Hindu scripture, the Bhagavad Gita: Vishnu was trying to persuade the 
+prince that he should do his duty, and to impress him, takes on his multi-armed form and says, 
+'Now I am become Death, the destroyer of worlds.' I suppose we all felt that, one way or another."
+--j oppenheimer
+                    </p>
+      </article>
 
-				<p>
-					Stand in front of the computer screen more napping, more napping all the
-					napping is exhausting yet rub face on everything i'm bored inside, let me
-					out i'm lonely outside, let me in i can't make up my mind whether to go in
-					or out, guess i'll just stand partway in and partway out, contemplating the
-					universe for half an hour how dare you nudge me with your foot?!?! leap into
-					the air in greatest offense!
-				</p>
-			</article>
+      <article>
+                    <img src="http://placekitten.com/200/200" alt="kitten">
 
-			<article>
-				<img src="http://placekitten.com/200/200" alt="kitten">
+                    <h2>Kittens Rule!</h2>
 
-				<h2>Kittens Rule!</h2>
+                    <p>
+The turning point for America came with Ronald Reagan. With the help of Lee Atwater 
+and Karl Rove, they started the tribalism movement that now engulfs the nation. 
+They used hate to create an “us versus them” mentality that is only growing worse. 
+Reagan single handedly disabled the union movement and convinced his tribe that 
+their taxes should not be used to help individuals unworthy of help. He also 
+energized the cabal of bankers and Wall Street investors along with the top 1% 
+to venture into the political arena in a major way. President Reagan also convinced 
+Americans that private industries always do a better job than government. This is 
+an extremely dangerous principle to sell. Private industry is only interested in 
+profit, not the people they serve. That's why private prisons are failing so badly 
+in this country. They have actually bribed Judges to give extended sentences in 
+order to increase profits. Private security such as Blackwater have been involved 
+in numerous transgressions. Private schools serve only the wealthiest individuals 
+in our society and currently they are attempting to get their hands on government 
+funds. If a public agency is not meeting the needs of the people, we have guarantees 
+in place to correct their deficiencies. We do not have the same oversight on private 
+companies. I think most of us would agree that the U.S. Military creates the finest 
+soldiers, sailors, airmen, and marines in the world. Please note that it's government 
+run. If you disagree with that, I'll gladly accompany you to Camp Lejeune were you 
+can express your opinion to the young Marines there.
 
-				<p>
-					Stand in front of the computer screen more napping, more napping all the
-					napping is exhausting yet rub face on everything i'm bored inside, let me
-					out i'm lonely outside, let me in i can't make up my mind whether to go in
-					or out, guess i'll just stand partway in and partway out, contemplating the
-					universe for half an hour how dare you nudge me with your foot?!?! leap into
-					the air in greatest offense!
-				</p>
-			</article>
-		</div>
-	</section>
+                    </p>
+      </article>
+    </div>
+  </section>
 
-	<section id="third">
-		<h1>Section Three</h1>
+  <section id="third">
+    <h1>Section Three</h1>
 
-		<article>
-			<img src="http://placekitten.com/500/300" alt="kitten">
+    <article>
+      <img src="http://placekitten.com/500/300" alt="kitten">
 
-			<p>
-				chase red laser dot or meow to be let in. Stare at ceiling light stuff and
-				things so groom yourself 4 hours - checked, have your beauty sleep 18 hours -
-				checked, be fabulous for the rest of the day - checked the dog smells bad.
-				Spread kitty litter all over house love blinks and purr purr purr purr yawn and
-				scream for no reason at 4 am.
-			</p>
-		</article>
-	</section>
+      <p>
+President George H.W. Bush then pushed through the necessary paperwork to create 
+Fox news and the talk show phenomenon. This created a Propaganda outlet that drew 
+the wealthiest individuals into the political process in a much more overt way. 
+With all this new money, the Republican Party subverted the southern States by 
+using subliminal racism to gain control of their legislative systems. With that 
+control they began to gerrymander their Congressional districts to insure continued 
+control of the State governments and the U.S. House of Representatives. They realized, 
+however, that other methods had to be enacted since they were losing the demographic 
+race. To try and negate this trend, they passed bills that complicated or made 
+difficult minority voting.
 
-	<section id="fourth">
-		<h1>Section Four</h1>
+      </p>
+    </article>
+  </section>
 
-		<img src="http://placekitten.com/800/300" alt="kitten">
-	</section>
+  <section id="fourth">
+          <h1>Section Four</h1>
 
-	<section id="fifth">
-		<h1>Section Five</h1>
+          <img src="http://placekitten.com/800/300" alt="kitten">
+  </section>
 
-		<div>
-			<article>
-				<img src="http://placekitten.com/400/200" alt="kitten">
+  <section id="fifth">
+    <h1>Section Five</h1>
+    <div>
+      <article>
+        <img src="http://placekitten.com/400/200" alt="kitten">
+        <h2>Kittens Rule!</h2>
+        <p>
+To enforce these laws, which were of questionable legality, the Reactionary 
+Republicans needed to ensure the support of the national courts. Sen. McConnell 
+began this procedure by making all of President Obama's judicial appointments 
+difficult by using the 60% rule and stalling his nominations. He also colluded 
+to change the fundamental makeup of the U.S. Supreme Court.
 
-				<h2>Kittens Rule!</h2>
+        </p>
+      </article>
 
-				<p>
-					Behind the couch have a lot of grump in yourself because you can't forget to
-					be grumpy and not be like king grumpy cat. Cough cough furball into food
-					bowl then scratch owner for a new one but spill litter box, scratch at
-					owner, destroy all furniture, especially couch. I like big cats and i can
-					not lie chirp at birds pounce on unsuspecting person carefully drink from
-					water glass and then spill it everywhere and proceed to lick the puddle.
-					When in doubt, wash pelt around the house and up and down stairs chasing
-					phantoms and i like big cats and i can not lie.
-				</p>
-			</article>
+      <article>
+        <img src="http://placekitten.com/400/200" alt="kitten">
+        <h2>Kittens Rule!</h2>
+        <p>
+Now we come to the culmination of all those maneuvers. We have Donald Trump as 
+President. He single handedly gutted attempts to attack global warming. He 
+has alienated what has historically been America's closest allies, and he has 
+endangered the effectiveness of NATO. He has started a trade war that many 
+economists warn as extremely dangerous to the American economy. He has convinced 
+Americans to give the wealthiest individuals a huge tax break while convincing 
+them that helping the poor just enables slackers. He has managed to reduce 
+medical care in this country claiming he had a better solution. He just hasn't 
+gotten around to implementing it yet while millions have lost coverage. He has 
+taken credit for programs implemented by President Obama that saved the economy 
+after the disasters created under President George W. Bush. He has boasted about 
+groping and molesting women. His neglect created a human disaster in Puerto Rico. 
+He has allowed Russian interference to sway an american election. He has impugned 
+the reputation of the American intelligence community. He has convinced his followers 
+that any news he doesn't like is “fake news”, and that he is the only reliable 
+source of information that Americans can trust. He is personally profiting from 
+being President, and he is guilty of nepotism.
 
-			<article>
-				<img src="http://placekitten.com/400/200" alt="kitten">
-
-				<h2>Kittens Rule!</h2>
-
-				<p>
-					Behind the couch have a lot of grump in yourself because you can't forget to
-					be grumpy and not be like king grumpy cat. Cough cough furball into food
-					bowl then scratch owner for a new one but spill litter box, scratch at
-					owner, destroy all furniture, especially couch. I like big cats and i can
-					not lie chirp at birds pounce on unsuspecting person carefully drink from
-					water glass and then spill it everywhere and proceed to lick the puddle.
-					When in doubt, wash pelt around the house and up and down stairs chasing
-					phantoms and i like big cats and i can not lie.
-				</p>
-			</article>
-		</div>
-	</section>
-	
-	<script src="script.js"></script>
+        </p>
+      </article>
+    </div>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
